stable/lazylibrarian/11.0.16/CONFIG.md
# lazylibrarian

![Version: 11.0.16](https://img.shields.io/badge/Version-11.0.16-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: latest](https://img.shields.io/badge/AppVersion-latest-informational?style=flat-square)

Get all your books, like series with Sonarr...

**Homepage:** <https://github.com/truecharts/apps/tree/master/charts/stable/lazylibrarian>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | <info@truecharts.org> | <https://truecharts.org> |

## Source Code

* <https://gitlab.com/LazyLibrarian/LazyLibrarian.git>
* <https://lazylibrarian.gitlab.io>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://library-charts.truecharts.org | common | 10.2.0 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| dockerMods.ffmpeg.enabled | bool | `true` |  |
| dockerMods.ffmpeg.repository | string | `"linuxserver/mods"` |  |
| dockerMods.ffmpeg.tag | string | `"lazylibrarian-ffmpeg"` |  |
| env.DOCKER_MODS | string | `"linuxserver/mods:lazylibrarian-ffmpeg"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"tccr.io/truecharts/lazylibrarian"` |  |
| image.tag | string | `"latest@sha256:5ecba98701f1a79bb7e88b83926121797115114ecaa761af1e16c89a1e91c190"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| persistence.varrun.enabled | bool | `true` |  |
| podSecurityContext.runAsGroup | int | `0` |  |
| podSecurityContext.runAsUser | int | `0` |  |
| securityContext.runAsNonRoot | bool | `false` |  |
| service.main.ports.main.port | int | `5299` |  |
| service.main.ports.main.targetPort | int | `5299` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.10.0](https://github.com/norwoodj/helm-docs/releases/v1.10.0)
